[package]
name = "json-example"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
json-core = { path = "core" }
json-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = "1.0"
serde_derive = "1.0.159"
serde_json = "1.0.95"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
